:wrench: Update Zed keymap.
Lazygit opens centered with task

--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -71,5 +71,16 @@
     "version": "2",
     "dock": "right",
     "default_width": 1000
+  },
+  "language_models": {
+    "google": {
+      "available_models": [
+        {
+          "name": "gemini-2.0-flash-exp",
+          "display_name": "gemini-2.0-flash-exp",
+          "max_tokens": 1000000
+        }
+      ]
+    }
   }
 }
